--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,70 @@ h3 {
     border: 0 none;
   }
 
-  @media only screen and (max-width: 640px) {
+  @media screen and (max-width: 980px) {
+
+    .container {
+      width: 100%;
+      max-width: 980px;
+      margin: 0 auto;
+      clear: both;
+  }
+  
+  #logo {
+    margin-left:20px;
+  }
+  
+  nav {
+    float:right;
+    margin:25px 20px 25px;
+    width: 280px;
+  }
+
+  #main-container {
+    padding:160px 280px 20px 20px;
+    width:100%;
+    clear:both;
+  }
+
+  }
+
+  @media screen and (max-width: 768px) {
+
+
+
+   .container {
+    width: 100%;
+    max-width: 768px;
+    margin: 0 auto;
+    clear: both;
+}
+
+  #logo {
+    margin-left:20px;
+  }
+
+
+    #main-container {
+      padding:160px 20px 20px 20px;
+      width:100%;
+      clear:both;
+    }
+
+    nav {
+      float:right;
+      margin:25px 20px 25px;
+      width: 280px;
+    }
+
+    .work:nth-child(even) {
+      margin-right: 40px;
+      margin-left:40px;
+    }
+    
+
+  }
+
+  @media screen and (max-width: 640px) {
     
     #logo {
       width: 100%;
